--- a/templates/actions/backend/list.html
+++ b/templates/actions/backend/list.html
@@ -1,4 +1,49 @@
 <div class="block">
     <h1>AnonGuard</h1>
     <p>{$message}</p>
+
+    <form id="depersonalizer-form" method="post">
+        <div class="field">
+            <div class="name"><label for="days">{_wp('Retention days')}</label></div>
+            <div class="value"><input type="number" name="days" id="days" value="{$settings.retention_days}"></div>
+        </div>
+        <div class="field">
+            <div class="value"><label><input type="checkbox" name="keep_geo" value="1"{if $settings.keep_geo} checked{/if}> {_wp('Keep geo statistics')}</label></div>
+        </div>
+        <div class="field">
+            <div class="value"><label><input type="checkbox" name="wipe_comments" value="1"{if $settings.wipe_comments} checked{/if}> {_wp('Wipe order comments')}</label></div>
+        </div>
+        <div class="field">
+            <div class="value"><label><input type="checkbox" name="anonymize_contact_id" value="1"{if $settings.anonymize_contact_id} checked{/if}> {_wp('Replace contact_id with anonymous contact')}</label></div>
+        </div>
+        {$wa->csrf()}
+        <div class="field">
+            <div class="value">
+                <button type="button" class="preview btn">{_wp('Preview')}</button>
+                <button type="button" class="run btn green">{_wp('Run')}</button>
+            </div>
+        </div>
+    </form>
+
+    <div id="depersonalizer-output"></div>
 </div>
+
+<script type="text/javascript">
+(function($) {
+    var form = $('#depersonalizer-form');
+    var output = $('#depersonalizer-output');
+    function send(action) {
+        $.post('?plugin=depersonalizer&module=run&action=' + action, form.serialize(), function(resp) {
+            if (resp && resp.data && resp.data.message) {
+                output.text(resp.data.message);
+            } else if (resp && resp.message) {
+                output.text(resp.message);
+            } else {
+                output.text(resp.error || '');
+            }
+        }, 'json');
+    }
+    form.find('.preview').on('click', function() { send('preview'); });
+    form.find('.run').on('click', function() { send('run'); });
+})(jQuery);
+</script>
