Implement batched depersonalization with AJAX controller

--- a/templates/actions/backend/list.html
+++ b/templates/actions/backend/list.html
@@ -14,7 +14,9 @@
             <div class="value"><label>{$fields.wipe_comments} {_wp('Wipe order comments')}</label></div>
         </div>
         <div class="field">
-            <div class="value"><label>{$fields.anonymize_contact_id} {_wp('Replace contact_id with anonymous contact')}</label></div>
+            <div class="value">
+                <label>{$fields.anonymize_contact_id} {_wp('Replace contact_id with anonymous contact')}</label>
+            </div>
         </div>
         <div class="field" id="exclude-keys" style="display:none;">
             <div class="name">{_wp('Exclude keys')}</div>
